libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-generics-struct-literal.jsonc
//@ run: fail
//@ description: fn/4 struct generics with a literal should fail to compile
[
  "::kernel::special_form::fn",
  {
    "#struct": {
      "T": { "#literal": 2 }
      //~^ ERROR expected a simple type parameter
    }
  },
  { "#struct": {} },
  "_",
  ["+", "a", "b"]
]
